Fixed mic position mobile view
Fixed the position of mic in the mobile view from center to the right as it was overlapping the logo earlier.

--- a/style.css
+++ b/style.css
@@ -465,6 +465,14 @@ form input {
     padding-right:5px;
   }
 }
+
+@media screen and (max-width: 450px){
+  .mic{
+    display: block;
+    margin-left: 230px;
+  }
+}
+
 .myname{
   width: 180px;
   
